--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "datto/json-rpc": "1.0.*"
+        "datto/json-rpc": "~1.0"
     },
     "autoload": {
         "psr-4": {
