--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "datto/json-rpc": "~1.0"
+        "datto/json-rpc": "~2.0"
     },
     "autoload": {
         "psr-4": {
@@ -24,7 +24,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Datto\\JsonRpc\\Http\\Example\\": "examples"
+            "Datto\\JsonRpc\\Http\\Examples\\": "examples/src"
         }
     }
 }
