--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "HTTP client and server for JSON-RPC 2.0",
     "keywords": ["php", "json", "rpc", "jsonrpc", "json-rpc", "php-json-rpc", "http", "client", "server"],
     "homepage": "http://datto.com",
-    "license": "LGPL-3.0",
+    "license": "LGPL-3.0+",
     "authors": [
         {
             "name": "Spencer Mortensen",
