--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "datto/json-rpc": "~5.0"
+        "datto/json-rpc": "~5.0",
+        "spencer-mortensen/exceptions": "^3.2"
     },
     "autoload": {
         "psr-4": {
