--- a/examples/composer.json
+++ b/examples/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "datto/json-rpc-http",
+    "name": "example",
     "type": "library",
     "description": "HTTP client and server for JSON-RPC 2.0",
     "keywords": ["php", "json", "rpc", "jsonrpc", "json-rpc", "php-json-rpc", "http", "client", "server"],
@@ -15,12 +15,11 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "datto/json-rpc": "~5.0",
-        "spencer-mortensen/exceptions": "^3.2"
+        "datto/json-rpc-http": "^4.0"
     },
     "autoload": {
         "psr-4": {
-            "Datto\\JsonRpc\\Http\\": "src"
+            "Example\\": "src"
         }
     }
 }
