--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "datto/json-rpc": "~5.0",
-        "spencer-mortensen/exceptions": "^3.2"
+        "php": ">=7.0.0",
+        "datto/json-rpc": "~6.0"
     },
     "autoload": {
         "psr-4": {
+            "Datto\\JsonRpc\\Http\\Examples\\": "examples/src",
             "Datto\\JsonRpc\\Http\\": "src"
         }
     }
